# rust-shellcode-loader

./: Cargo.toml  README.md  encrypt_shellcode..py  encrypt_shellcode.py
src/: main.rs  types.rs
